--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,11 @@
 cmake_minimum_required(VERSION 3.18)
-project(HeatSim LANGUAGES C CXX)
+project(HeatSim LANGUAGES C CXX CUDA)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CUDA_STANDARD 17)
+set(CMAKE_CUDA_STANDARD_REQUIRED ON)
+set(CMAKE_CUDA_SEPARABLE_COMPILATION ON)
 
 find_package(OpenGL REQUIRED)
 find_package(glfw3 REQUIRED)
@@ -57,6 +60,14 @@ set(SOURCES
     src/ui/ui_controller.cpp
     src/utils/logger.cpp
     src/io/glad.c
+    src/simulation/simulation_engine.cpp
+    src/simulation/cuda_simulation_engine.cpp
+    src/cuda/cuda_manager.cpp
+    src/cuda/cuda_gl_interop.cpp
+)
+
+set(CUDA_SOURCES
+    src/cuda/heat_kernels.cu
 )
 
 set(HEADERS
@@ -65,13 +76,19 @@ set(HEADERS
     src/graphics/shader.h
     src/ui/ui_controller.h
     src/utils/logger.h
+    src/simulation/simulation_engine.h
+    src/simulation/cuda_simulation_engine.h
+    src/cuda/cuda_manager.h
+    src/cuda/cuda_gl_interop.h
+    src/cuda/heat_kernels.cuh
 )
 
-add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
+add_executable(${PROJECT_NAME} ${SOURCES} ${CUDA_SOURCES} ${HEADERS})
 
 target_include_directories(${PROJECT_NAME} PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/src
     ${CMAKE_CURRENT_SOURCE_DIR}/include
+    ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}
 )
 
 target_link_libraries(${PROJECT_NAME}
@@ -79,6 +96,8 @@ target_link_libraries(${PROJECT_NAME}
     glfw
     imgui
     glm::glm
+    ${CUDA_LIBRARIES}
+    cudart
     ${CMAKE_DL_LIBS}
     ${CMAKE_THREAD_LIBS_INIT}
 )
